crates/viewer/re_blueprint_tree/tests/snapshots/view_structure_test/no-query/unknown_origin.snap
---
source: crates/viewer/re_blueprint_tree/tests/view_structure_test.rs
expression: blueprint_tree_data
---
root_container:
  name:
    Placeholder: Grid
  kind: Grid
  visible: true
  default_open: true
  children:
    - View:
        class_identifier: 3D
        name:
          Placeholder: wrong/path
        visible: true
        default_open: false
        origin_tree:
          kind: EmptyOriginPlaceholder
          entity_path:
            - wrong
            - path
          visible: false
          label: path
          highlight_sections: []
          default_open: false
          children: []
        projection_trees: []
